<resources>
    <string name="app_name">Fun</string>
    <string name="Account">Account</string>
    <string name="Password">Password</string>
    <string name="Entrance">Entrance</string>
    <string name="join_to_have_fun">Join to have fun</string>
    <string name="main_page_toast">Welcome</string>

    <string name="Vibration">Vibration</string>
    <string name="Accelerator">Accelerator</string>

    <string name="show_next_roi">Next</string>
    <string name="show_prev_roi">Prev</string>

    <string name="default_table_row">0 0 0 0 0 0 0</string>

    <string name="quick_enter_roi">ROI</string>

    <string name="quick_enter_but">Button</string>

    <string name="TP_data_dir">Input dir of data</string>
    <string name="record_dir">Prefix of data</string>

    <!-- String for quick actions. -->
    <string name="go_selfie">Take Selfie</string>

    <!-- String for quick actions. -->
    <string name="go_video">Record Vedio</string>

    <!-- String for quick actions. -->
    <string name="go_photo">Take Photo</string>
</resources>
