<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:gravity="top"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:text="@string/join_to_have_fun"
        android:id="@+id/title"
        android:background="#c9f6ac"
        android:textColor="#330dda"
        android:contextClickable="false"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_gravity="top"
        android:layout_weight="1" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/Vibration"
        android:id="@+id/start_vib"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/Accelerator"
        android:id="@+id/show_accel"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/accel_value"
        android:layout_gravity="center_horizontal" />


</LinearLayout>

