<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:gravity="top"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:text="@string/join_to_have_fun"
        android:id="@+id/title"
        android:background="#c9f6ac"
        android:textColor="#330dda"
        android:contextClickable="false"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_gravity="top"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/record_dir"
            android:id="@+id/record_dir"
            android:layout_weight="0.4"
            android:layout_gravity="center_horizontal" />
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:hint="@string/TP_data_dir"
            android:id="@+id/data_dir"
            android:layout_weight="0.7"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="0,1">



        <TableRow>
            <TextView
                android:text="@string/default_table_row"
                android:id = "@+id/row_1"
                android:padding="3dip"
                android:layout_span="2"
                android:layout_gravity="center_horizontal" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/default_table_row"
                android:id = "@+id/row_2"
                android:padding="3dip"
                android:layout_span="2"
                android:layout_gravity="center_horizontal" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/default_table_row"
                android:id = "@+id/row_3"
                android:padding="3dip"
                android:layout_span="2"
                android:layout_gravity="center_horizontal" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/default_table_row"
                android:id = "@+id/row_4"
                android:padding="3dip"
                android:layout_span="2"
                android:layout_gravity="center_horizontal" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/default_table_row"
                android:id = "@+id/row_5"
                android:padding="3dip"
                android:layout_span="2"
                android:layout_gravity="center_horizontal" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/default_table_row"
                android:id = "@+id/row_6"
                android:padding="3dip"
                android:layout_span="2"
                android:layout_gravity="center_horizontal" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/default_table_row"
                android:id = "@+id/row_7"
                android:padding="3dip"
                android:layout_span="2"
                android:layout_gravity="center_horizontal" />
        </TableRow>

        <TableRow>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_prev_roi"
                android:id="@+id/show_prev_roi"
                android:layout_weight="0.5"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_next_roi"
                android:id="@+id/show_next_roi"
                android:layout_weight="0.5"

                android:layout_gravity="center_horizontal" />
        </TableRow>
    </TableLayout>

</LinearLayout>

