<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:gravity="top"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:text="@string/join_to_have_fun"
        android:id="@+id/title"
        android:background="#c9f6ac"
        android:textColor="#330dda"
        android:contextClickable="false"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_gravity="top"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="1"
        android:layout_marginTop="70dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:text="@string/Account"
            android:id="@+id/textView"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <EditText
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/editText"
            android:textSize="20dp"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="1"
        android:layout_marginTop="10dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            android:id="@+id/textView2"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <EditText
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/editText2"
            android:textSize="20dp"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/Entrance"
        android:id="@+id/quick_enter"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
